2009-01-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Split Prefs dialog General tab into sub-notebook with Startup and
   Miscellaneous tabs. Merge Search tab into Miscellaneous tab.


2009-01-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * po/cs.po, THANKS: Update of Czech translation. Thanks to Karel Kolman
   for providing.


2009-01-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Use g_timeout_add_seconds() instead of g_timeout_add().
   Add missing NULL check in monitor_file_changed_cb().
   Reset the file status when saving a file failed.
   Disable GIO based file monitoring for now since it doesn't work yet
   as stable as it should. Define USE_GIO_FILEMON to use.
 * src/utils.c:
   Use g_file_set_contents() to write files to disk in
   utils_write_file() for better error checking and to avoid corruption
   of config files when there is no more free disk space.
   This is not used for saving documents (part of Debian bug #503391).
 * src/dialogs.c:
   Use the stock overwrite confirmation dialog provided by GTK 2.8
   in the Save As dialog.


2009-01-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/socket.c:
   Minor cleanup in the socket code.
   When files are opened remotely, always use gtk_window_present() to
   bring the main window to front or whatever the window manager decides
   to do (part of #2276179).
   On Windows, we send a pointer to the main window to the remote
   instance which then brings the window to the front (grab focus). This
   should work better than the previous implementation and should avoid
   the blinking tasklist item.
 * HACKING, README, wscript, configure.in, doc/geany.html,
   doc/geany.txt, geany.nsi, src/geany.h, src/notebook.c, src/utils.c:
   Increase minimum required GTK version to 2.8.


2009-01-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c: