@@ -3,6 +3,8 @@
  * src/interface.c, geany.glade:
    Split Prefs dialog General tab into sub-notebook with Startup and
    Miscellaneous tabs. Merge Search tab into Miscellaneous tab.
+ * src/search.c:
+   Remember whether find/replace all expanders were expanded.
 
 
 2009-01-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
